--- a/topic-id.html
+++ b/topic-id.html
@@ -6,7 +6,7 @@
         <script type="text/javascript">
 			var req;
 			function doGet() {
-				alert("doGet");
+				//alert("doGet");
 				req = new XMLHttpRequest();
 				req.onreadystatechange = processReqChange;
 				//req.open("GET", "http://localhost/~mmckinlay/radian6/topics.xml", true);
